--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -3,3 +3,15 @@
 @import 'tailwindcss/components';
 
 @import 'tailwindcss/utilities';
+
+@layer components {
+  .btn-primary {
+    @apply inline-flex items-center justify-center px-12 py-3 text-base font-medium text-white shadow bg-[#820002] border border-transparent rounded hover:bg-[#3b0d00];
+  }
+  .btn-secondary {
+    @apply inline-flex items-center justify-center px-12 py-3 text-base font-medium text-white bg-gray-700 border border-transparent rounded shadow hover:text-white hover:bg-gray-900;
+  }
+  .input-text {
+    @apply block w-full border-gray-300 placeholder-gray-300 tracking-wider rounded focus:ring-[#b22222] focus:border-[#b22222] sm:text-sm;
+  }
+}
